--- a/src/component/weather.css
+++ b/src/component/weather.css
@@ -1,4 +1,5 @@
 .topcontainer {
+  overflow-x: hidden;
   position: relative;
 }
 
@@ -37,6 +38,7 @@ button {
 
 #place {
   position: absolute;
+  text-align: center;
   top: 50%;
   left: 50%;
   color: #fff;
@@ -119,9 +121,22 @@ h3 {
     width: 220px;
   }
 
-  h1 {
+  #place {
+    top: 320px;
+    font-size: 28px;
+  }
+
+  #time {
     top: 80px;
-    font-size: 22px;
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
+
+  #date {
+    top: 260px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 20px;
   }
 
   #humidity {
@@ -132,5 +147,9 @@ h3 {
   #weathericon {
     width: 150px;
     height: 150px;
+  }
+
+  .bottomcontainer {
+    justify-content: center;
   }
 }
